# CRM-fast-api

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  main.py  pyproject.toml  requirements.txt  zbpack.json
app/: database.py  main.py
app/models/: __init__.py  db_models.py  schemas.py
app/routers/: __init__.py  admin.py  analysis.py  auth.py  campaigns.py  customers.py  email.py  schedules.py  tracking.py
app/services/: __init__.py  auth_service.py  campaign_service.py  data_service.py  db_service.py  email_service.py  scheduler_service.py
app/static/css/: style.css
app/templates/: index.html  login.html
